# kanjivg

./: .gitignore  Makefile.am  Makefile.in  README.too  addstrokenum  configure  configure.ac
m4/: ax_python2.m4
test/: dummy-pk  gpmix  run-tests  strokenum  xml
